# work-parser

./: .env.example  .gitignore  LICENSE  QUICK_START.md  README.md  profile.example.md  pyproject.toml  requirements.txt
freelancer_bot/: __init__.py  __main__.py  app.py  config.py  filters.py  formatting.py  kwork_offer.py  sources.py  storage.py
freelancer_bot/filters_config/: keywords.json  stop_words.json
tests/: test_config.py  test_filters.py
